fixed about me mobile, scrollbar

--- a/src/app.scss
+++ b/src/app.scss
@@ -26,6 +26,27 @@ section {
   scroll-snap-align: center;
   overflow: hidden;
 }
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #495057; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #495057; 
+}
 
 @mixin mobile {
   @media (max-width: 738px) {
