--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -80,7 +80,9 @@
       }
 
       .buttons {
-        margin-top: 20px;
+        // margin-top: 20px;
+        display: flex;
+        // flex-wrap: wrap;
 
         a {
           padding: 20px;
